--- a/pokemonbean/resources_pk/rom/web/html/moves/moves.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/moves.html
@@ -9,7 +9,7 @@
 			<c:message value="msg_moves,content_name"/>
 			<input c:varValue="typedName" name="typedName" type="text"/><br/>
 			<c:message value="msg_moves,cat"/>
-			<c:select className="java.lang.String" default="" map="categories" name="category" update="" varValue="category"/><br/>
+			<c:select default="" map="categories" name="category" update="" varValue="category"/><br/>
 			<c:message value="msg_moves,content_type"/>
 			<input c:varValue="typedType" name="typedType" type="text"/><br/>
 			<c:message value="msg_moves,content_type_whole"/>
