--- a/pokemonbean/resources_pk/rom/web/html/pokemon/pokedex.html
+++ b/pokemonbean/resources_pk/rom/web/html/pokemon/pokedex.html
@@ -16,9 +16,9 @@
 			<input c:varValue="typedMinNbPossEvos" name="typedMinNbPossEvos" type="text"/>
 			<input c:varValue="typedMaxNbPossEvos" name="typedMaxNbPossEvos" type="text"/><br/>
 			<c:message value="msg_pokedex,is_evo"/>
-			<c:select className="sb" default="" map="booleans" name="isEvo" update="" varValue="isEvo"/><br/>
+			<c:select default="" map="booleans" name="isEvo" update="" varValue="isEvo"/><br/>
 			<c:message value="msg_pokedex,leg"/>
-			<c:select className="sb" default="" map="booleans" name="isLeg" update="" varValue="isLeg"/><br/>
+			<c:select default="" map="booleans" name="isLeg" update="" varValue="isLeg"/><br/>
 			<input type="submit" value="OK"/>
 		</form>
 		<br/>
