--- a/pokemonbean/resources_pk/rom/web/html/simulation/editpokemontrainer.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/editpokemontrainer.html
@@ -80,7 +80,7 @@
 				<c:message value="msg_simulation,ability_pk"/> {getTranslatedAbility()}<br/>
 				<c:message value="msg_simulation,item_pk"/> {getTranslatedItem()}<br/>
 				<c:message value="msg_simulation,gender_pk"/>
-				<c:select className="aiki.map.pokemon.enums.Gender" default="" map="genders" name="gender" update="" varValue="gender"/><br/>
+				<c:select default="" map="genders" name="gender" update="" varValue="gender"/><br/>
 				<c:message value="msg_simulation,level_pk"/>
 				<input c:varValue="level" name="level" type="text"/><br/>
 				<c:if condition="add">
