--- a/pokemonbean/resources_pk/rom/web/html/simulation/selectpokemon.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/selectpokemon.html
@@ -13,11 +13,11 @@
 			<c:message value="msg_pokedex,content_type_whole"/>
 			<input c:varValue="wholeWord" name="wholeWord" type="checkbox"/><br/>
 			<c:message value="msg_pokedex,has_evo"/>
-			<c:select className="sb" default="" map="booleans" name="hasEvo" update="" varValue="hasEvo"/><br/>
+			<c:select default="" map="booleans" name="hasEvo" update="" varValue="hasEvo"/><br/>
 			<c:message value="msg_pokedex,is_evo"/>
-			<c:select className="sb" default="" map="booleans" name="isEvo" update="" varValue="isEvo"/><br/>
+			<c:select default="" map="booleans" name="isEvo" update="" varValue="isEvo"/><br/>
 			<c:message value="msg_pokedex,leg"/>
-			<c:select className="sb" default="" map="booleans" name="isLeg" update="" varValue="isLeg"/><br/>
+			<c:select default="" map="booleans" name="isLeg" update="" varValue="isLeg"/><br/>
 			<input type="submit" value="OK"/>
 		</form>
 		<br/>
