--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulation.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulation.html
@@ -127,9 +127,9 @@
 							</tbody>
 						</table>
 						<span c:for="foePkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
-						<input c:groupId="actionFoeRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedFoeAction" type="radio" value="EDIT"/>
+						<input c:groupId="actionFoeRadios" c:validator="selected_radio" name="selectedFoeAction" type="radio" value="EDIT"/>
 						<c:message value="msg_simulation,edit"/><br/>
-						<input c:groupId="actionFoeRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedFoeAction" type="radio" value="REMOVE"/>
+						<input c:groupId="actionFoeRadios" c:validator="selected_radio" name="selectedFoeAction" type="radio" value="REMOVE"/>
 						<c:message value="msg_simulation,remove"/><br/>
 						<c:submit message="msg_simulation,select"/>
 						<span c:for="actionFoeRadios" class="errormessage" c:valueMessage="msg_simulation,unselected_action"> </span><br/>
@@ -173,9 +173,9 @@
 							</tbody>
 						</table>
 						<span c:for="allyPkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
-						<input c:groupId="actionAllyRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAllyAction" type="radio" value="EDIT"/>
+						<input c:groupId="actionAllyRadios" c:validator="selected_radio" name="selectedAllyAction" type="radio" value="EDIT"/>
 						<c:message value="msg_simulation,edit"/><br/>
-						<input c:groupId="actionAllyRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAllyAction" type="radio" value="REMOVE"/>
+						<input c:groupId="actionAllyRadios" c:validator="selected_radio" name="selectedAllyAction" type="radio" value="REMOVE"/>
 						<c:message value="msg_simulation,remove"/><br/>
 						<c:submit message="msg_simulation,select"/>
 						<span c:for="actionAllyRadios" class="errormessage" c:valueMessage="msg_simulation,unselected_action"> </span><br/>
@@ -274,9 +274,9 @@
 						</tbody>
 					</table>
 					<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
-					<input c:groupId="actionRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAction" type="radio" value="EDIT"/>
+					<input c:groupId="actionRadios" c:validator="selected_radio" name="selectedAction" type="radio" value="EDIT"/>
 					<c:message value="msg_simulation,edit"/><br/>
-					<input c:groupId="actionRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAction" type="radio" value="REMOVE"/>
+					<input c:groupId="actionRadios" c:validator="selected_radio" name="selectedAction" type="radio" value="REMOVE"/>
 					<c:message value="msg_simulation,remove"/><br/>
 					<c:submit message="msg_simulation,select"/>
 					<span c:for="actionRadios" class="errormessage" c:valueMessage="msg_simulation,unselected_action"> </span><br/>
