--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
@@ -39,7 +39,7 @@
 	<body>
 		<form action="" c:command="web/html/simulation/simulationlevel.html" method="post">
 			<c:message value="msg_levelsimu,no_fight"/>
-			<input c:varValue="noFight" type="text" value="noFight"/><br/>
+			<input c:varValue="noFight" name="noFight" type="text" value="noFight"/><br/>
 			<input type="submit" value="OK"/>
 		</form>
 		<br/>
