--- a/desktop/applis/apps/bean/bean_games/presidentbean/src/main/resources/resources_cards/classes/cards/president/results.html
+++ b/desktop/applis/apps/bean/bean_games/presidentbean/src/main/resources/resources_cards/classes/cards/president/results.html
@@ -1,11 +1,11 @@
 <html c:bean="results" xmlns:c="javahtml">
 <head>
-<title>Results</title>
+<title><c:message value="msg,results"/></title>
 <link href="resources_cards/css/president.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<table border="1">
-		<caption>Ranks</caption>
+		<caption><c:message value="msg,ranks"/></caption>
 		<thead>
 			<tr>
 				<td></td>
