--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/classes/en/cards/belote/results.html
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/classes/en/cards/belote/results.html
@@ -1,6 +1,6 @@
 <html c:bean="results" xmlns:c="javahtml">
 <head>
-<title>Results</title>
+<title><c:message value="msg,results"/></title>
 <link href="resources_cards/css/belote.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
