--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/classes/cards/tarot/detailsresults.html
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/classes/cards/tarot/detailsresults.html
@@ -1,23 +1,31 @@
 <html c:bean="details" xmlns:c="javahtml">
 <head>
-<title>Results</title>
+<title><c:message value="msg,results"/></title>
 <link href="resources_cards/css/tarot.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<c:if condition="playClassicGame()">
-		<h1>Calculation of bidding points</h1>
-		<p>Base points for bidding: {basePoints}</p>
-		<p>Player who has led the trump ace to the last trick:
-			{playerSmall}</p>
-		<p>Difference between taker''s points and necessary points in
-			order to win this deal: {differenceScoreTaker}</p>
-		<p>Rate in relationship with bidding: {rate}</p>
-		<p>Taker''s score without declaring: ( {basePoints} + {small} +
-			{differenceScoreTaker} ) * {rate} = {multipliedTmp} points</p>
-		<h1>Calculation of players''s declaring</h1>
+		<h1><c:message value="msg,classic_bid"/></h1>
+		<p><c:message value="msg,classic_base"/>{basePoints}</p>
+		<p><c:message value="msg,classic_small"/>{playerSmall}</p>
+		<p><c:message value="msg,classic_diff"/>{differenceScoreTaker}</p>
+		<p><c:message value="msg,classic_rate"/>{rate}</p>
+		<p>
+			<c:message value="msg,classic_score_taker">
+				<param value="basePoints"/>
+				<param value="small"/>
+				<param value="differenceScoreTaker"/>
+				<param value="rate"/>
+				<param value="multipliedTmp"/>
+			</c:message></p>
+		<h1><c:message value="msg,classic_decl"/></h1>
 		<ul>
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
-				<li>{l.nickname}''s declaring ({l.status}): <br/>
+				<li>
+					<c:message value="msg,decl_player">
+						<param value="l.nickname"/>
+						<param value="l.statut"/>
+					</c:message><br/>
 					<ul>
 						<c:for key="h" value="p" map="l.handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
 							<li>{h} : {p}</li>
@@ -25,25 +33,24 @@
 						<c:for key="m" value="p" map="l.miseres" keyClassName='java.lang.String' varClassName='java.lang.Short'>
 							<li>{m} : {p}</li>
 						</c:for>
-						<li>Sum : {l.sum}</li>
+						<li><c:message value="msg,sum"/>{l.sum}</li>
 					</ul>
 				</li>
 			</c:for>
-			<li>Sum of players'' declaring: {sumPlayers}</li>
+			<li><c:message value="msg,classic_sum_player"/>{sumPlayers}</li>
 		</ul>
 		<br/>
-		<h1>Additional bonuses</h1>
-		Bonuses for attack team:{additionnalBonusesAttack}<br/>
-		Bonuses for defense team:{additionnalBonusesDefense}<br/>
-		Sum of additional bonuses: {diffAttackDefenseBonuses}<br/>
+		<h1><c:message value="msg,classic_addon"/></h1>
+		<c:message value="msg,classic_addon_att"/>{additionnalBonusesAttack}<br/>
+		<c:message value="msg,classic_addon_def"/>{additionnalBonusesDefense}<br/>
+		<c:message value="msg,classic_addon_sum"/>{diffAttackDefenseBonuses}<br/>
 		<table border="1">
-			<caption>Rates and scores of this deal for each player</caption>
+			<caption><c:message value="msg,classic_rate_pl"/></caption>
 			<thead>
 				<tr>
-					<td>Player</td>
-					<td title="This rate is applied on taker''s score">Rate</td>
-					<td
-						title="This score belongs to a linear relationship with taker''s score and the rate">Score</td>
+					<td><c:message value="msg,player"/></td>
+					<td><c:message value="msg,rate"/></td>
+					<td><c:message value="msg,score"/></td>
 				</tr>
 			</thead>
 			<tbody>
@@ -59,16 +66,15 @@
 	</c:if>
 	<c:if condition="playVariantModeGame()">
 		<table border="1">
-			<caption>Steps of calculation of players'' ranking by
-				criteria</caption>
+			<caption><c:message value="msg,variant_table_1"/></caption>
 			<thead>
 				<tr>
-					<td>Player</td>
-					<td>Ranking in relationship with the difference of points</td>
-					<td>Ranking in relationship with the number of oudlers</td>
-					<td>Ranking in relationship with the number of characters</td>
-					<td>Ranking in relationship with the strength of characters</td>
-					<td>Final rank</td>
+					<td><c:message value="msg,variant_table_1_1"/></td>
+					<td><c:message value="msg,variant_table_1_2"/></td>
+					<td><c:message value="msg,variant_table_1_3"/></td>
+					<td><c:message value="msg,variant_table_1_4"/></td>
+					<td><c:message value="msg,variant_table_1_5"/></td>
+					<td><c:message value="msg,variant_table_1_6"/></td>
 				</tr>
 			</thead>
 			<tbody>
@@ -85,15 +91,15 @@
 			</tbody>
 		</table>
 		<table border="1">
-			<caption>Calculation of players'' points</caption>
+			<caption><c:message value="msg,variant_table_2"/></caption>
 			<thead>
 				<tr>
-					<td>Nickname</td>
-					<td>Won points in the tricks</td>
-					<td>Minimum score for winning</td>
-					<td>Differences of points</td>
-					<td>Rate</td>
-					<td>Score</td>
+					<td><c:message value="msg,variant_table_2_1"/></td>
+					<td><c:message value="msg,variant_table_2_2"/></td>
+					<td><c:message value="msg,variant_table_2_3"/></td>
+					<td><c:message value="msg,variant_table_2_4"/></td>
+					<td><c:message value="msg,variant_table_2_5"/></td>
+					<td><c:message value="msg,variant_table_2_6"/></td>
 				</tr>
 			</thead>
 			<tbody>
@@ -109,10 +115,13 @@
 				</c:for>
 			</tbody>
 		</table>
-		<h1>Calculation of players''s declaring</h1>
+		<h1><c:message value="msg,variant_decl"/></h1>
 		<ul>
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
-				<li>{l.nickname}''s declaring: <br/>
+				<li>
+					<c:message value="msg,variant_decl_pl">
+						<param value="l.nickname"/>
+					</c:message><br/>
 					<ul>
 						<c:for key="h" value="p" map="l.handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
 							<li>{h}</li>
@@ -124,13 +133,13 @@
 				</li>
 			</c:for>
 		</ul>
-		<h1>Bonuses</h1>
+		<h1><c:message value="msg,variant_add"/></h1>
 		<table border="1">
-			<caption>Players'' additional bonuses</caption>
+			<caption><c:message value="msg,variant_add_pl"/></caption>
 			<thead>
 				<tr>
-					<td>Nickname</td>
-					<td>Bonus</td>
+					<td><c:message value="msg,variant_add_pl_1"/></td>
+					<td><c:message value="msg,variant_add_pl_2"/></td>
 				</tr>
 			</thead>
 			<tbody>
