--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/classes/cards/tarot/detailsresults.html
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/classes/cards/tarot/detailsresults.html
@@ -22,7 +22,7 @@
 		<ul>
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
 				<li>
-					<c:message value="msg,decl_player">
+					<c:message value="msg,classic_decl_player">
 						<param value="l.nickname"/>
 						<param value="l.statut"/>
 					</c:message><br/>
